--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "lodash": "^4.17.4"
+    },
+    "dependencies": {
+        "bootstrap": "^4.0.0-beta",
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1"
     }
 }
