--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "cross-env": "^5.1",
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
-        "lodash": "^4.17.4"
+        "lodash": "^4.17.4",
+        "vue": "^2.5.7"
     },
     "dependencies": {
         "bootstrap": "^4.0.0-beta",
