--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bootstrap": "^4.0.0-beta",
         "jquery": "^3.6.0",
+        "moment": "^2.18.1",
         "popper.js": "^1.16.1"
     }
 }
