--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "at.js": "^1.5.4",
         "bootstrap": "^4.0.0-beta",
         "jquery": "^3.6.0",
+        "jquery.caret": "^0.3.1",
         "popper.js": "^1.16.1"
     }
 }
