--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap": "^4.0.0-beta",
         "jquery": "^3.6.0",
         "jquery.caret": "^0.3.1",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "vue-instantsearch": "^1.3.1"
     }
 }
