--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "jquery": "^3.6.0",
         "jquery.caret": "^0.3.1",
         "popper.js": "^1.16.1",
+        "trix": "^0.11.1",
         "vue-instantsearch": "^1.3.1"
     }
 }
